# worldmodel_experiment

./: .gitignore
act_cond_diffusion/: pyproject.toml
avid/: pyproject.toml
avid/configs/eval/: avid_145M.yaml
dacon/: README.md
dacon/private_checkpoints/: README_PLACEHOLDER.txt
dacon/private_csv/: README_PLACEHOLDER.txt  public_ids.txt
dacon/private_data/: README_PLACEHOLDER.txt
dacon_private/: README.md
dacon_private/checkpoints/: README_PLACEHOLDERS.txt
dacon_private/data/: README_PLACEHOLDERS.txt
dacon_private/stats/: README_PLACEHOLDERS.txt
dacon_private/svla_scoring_kit/: pyproject.toml
inha_ai/: README.md
inha_ai/challenge_kit/: pyproject.toml
inha_ai/checkpoints/: README_PLACEHOLDER.txt
inha_ai/data/: README_PLACEHOLDER.txt
latent_diffusion/: pyproject.toml
participant_release/: README.md
participant_release/checkpoints/: README_PLACEHOLDERS.txt
so100/so100_act_cond_diffusion/: pyproject.toml
so100/so100_act_cond_diffusion/configs/eval/: smolvla_so100_eval_11M.yaml  so100_act_cond_diffusion_11M.yaml
so100/so100_act_cond_diffusion/configs/train/: so100_act_cond_diffusion_11M.yaml  so100_action_extractor.yaml
so100/so100_act_cond_diffusion/libs/dynamicrafter/lvdm/utils/: callbacks.py  eval.py  train.py
so100/so100_act_cond_diffusion/scripts/: preprocess_smolvla_eval_challenge.py  preprocess_smolvla_eval_stride.py  preprocess_so100_stride.py  train_action_extractor.py
so100/so100_act_cond_diffusion/scripts/eval/: eval_action_extractor.py  eval_diffusion.py  feature_csv_utils.py  make_answer_feature_csv.py  make_submission_feature_csv.py  score_feature_csv.py
so100/so100_act_cond_diffusion/src/ldwma/datasets/: lerobot_so100.py
so100/so100_act_cond_diffusion/src/ldwma/lightning/data_modules/: challenge_action.py  lerobot_so100.py
so100/so100_act_cond_diffusion/src/ldwma/models/: action_extractor.py
(+254 files in other folders)
